<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>me.pattrick</groupId>
	<artifactId>MarbleDropPlugin</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>MarbleDropPlugin</name>

	<properties>
		<!-- Paper 26.2 targets Java 25 -->
		<java.version>25</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<paper.api.version>26.2.build.39-alpha</paper.api.version>
	</properties>

	<repositories>
		<!-- PaperMC Maven repo (Paper API, etc.) -->
		<repository>
			<id>papermc</id>
			<url>https://repo.papermc.io/repository/maven-public/</url>
		</repository>

		<!-- Keep Mojang libraries repo only if you truly need authlib -->
		<repository>
			<id>minecraft-repo</id>
			<url>https://libraries.minecraft.net/</url>
		</repository>

		<!-- EngineHub (WorldEdit); FAWE is API-compatible with worldedit-bukkit -->
		<repository>
			<id>enginehub-maven</id>
			<url>https://maven.enginehub.org/repo/</url>
		</repository>

		<!-- ProtocolLib's 5.5.0-dev-build (see the dependency below) doesn't
		     exist on any public Maven repo - dmulloy2's own Nexus only ever
		     published 5.3.0/5.4.0-SNAPSHOT for this artifact. Vendored here
		     (local-libs/, committed to git) instead of relying on a local
		     .m2 install, so a clean checkout - CI included - can actually
		     resolve it without a developer having manually
		     install:install-file'd it first. -->
		<repository>
			<id>local-libs</id>
			<url>file://${project.basedir}/local-libs</url>
			<!-- No .sha1/.md5 sidecar files here - suppress the (harmless
			     but noisy) checksum-missing warning Maven would otherwise
			     log a full stack trace for on every resolve. -->
			<releases>
				<checksumPolicy>ignore</checksumPolicy>
			</releases>
		</repository>
	</repositories>

	<dependencies>
		<!-- Compile against Paper API (provided by the server at runtime) -->
		<dependency>
			<groupId>io.papermc.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>${paper.api.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- Optional: only used by TutorialCraftFrameManager.setupFromSelection
		     to read an admin's WorldEdit/FAWE selection. provided scope;
		     supplied at runtime by WorldEdit or FAWE, not bundled in our jar.
		     Nothing else in the plugin references these classes, so the
		     plugin loads and runs fine even if neither is installed. -->
		<dependency>
			<groupId>com.sk89q.worldedit</groupId>
			<artifactId>worldedit-bukkit</artifactId>
			<version>7.4.0</version>
			<scope>provided</scope>
		</dependency>

		<!-- Optional: only used by RaceGlowPrivacy to make a marble's glow
		     toggle (see RaceGlowListener) visible to just the toggling
		     player instead of everyone. Bukkit's own Entity#setGlowing()
		     has no per-viewer option, so this needs raw packet filtering.
		     provided scope; supplied at runtime by ProtocolLib, not bundled
		     in our jar. Main only constructs RaceGlowPrivacy when
		     ProtocolLib is actually installed (see softdepend in
		     plugin.yml), so the plugin loads and runs fine without it;
		     glow just falls back to being visible to everyone. Resolved
		     from the local-libs/ repository above (no fixed-version
		     release exists on a public Maven repo for this snapshot):
		     https://github.com/dmulloy2/ProtocolLib/releases/tag/dev-build -->
		<dependency>
			<groupId>com.comphenix.protocol</groupId>
			<artifactId>ProtocolLib</artifactId>
			<version>5.5.0-dev-build</version>
			<scope>provided</scope>
		</dependency>

	</dependencies>

	<build>
		<finalName>MarblebaseDrop</finalName>
		<sourceDirectory>src/main/java</sourceDirectory>

		<plugins>
			<!-- Modern compiler plugin + Java 21 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>

		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>src/main/resources</directory>
				<includes>
					<include>plugin.yml</include>
					<include>heads.yml</include>
					<include>config.yml</include>
					<include>cooldowns.yml</include>
				</includes>
			</resource>
			</resources>
	</build>

</project>
